--- a/index.html
+++ b/index.html
@@ -70,6 +70,40 @@
                     <img src="img/expsvg3.svg" alt="" id="expsvg3">
                 </div>
             </div>
+            <div class="featureList" id="budgetFeat">
+                <h3>Budgets</h3>
+                <p>Establishing robust financial frameworks involves creating and managing budgets at both the departmental and project levels. By meticulously outlining financial allocations for different departments and projects, you provide a structured financial plan to guide operations. </p>
+
+                <!-- <div class="overflowDiv" id="expcheckFlow"><img src="./img/expsvgcheck.svg" alt="" id="expsvgcheck"></div> -->
+                <div class="featureImage" id="budgetsFimg">
+                    <img src="img/bgttopsvg.svg" alt="" id="bgttopsvg">
+                    <div class="bdgersona">
+                        <img src="./img/bdgp1.svg" alt="">
+                        <div class="bdgtMetric">
+                            <div class="bdgtMetricText">
+                                <span class="bdgtOwner">Damilola Ibrahim</span>
+                                <div class="budgtAmt"><span>N25,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
+                            </div>
+                            <div class="bdgtProgressDiv">
+                                <div class="bdgtUsed" id="bdgtUsed1"></div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="bdgersona">
+                        <img src="./img/bdgp2.svg" alt="">
+                        <div class="bdgtMetric">
+                            <div class="bdgtMetricText">
+                                <span class="bdgtOwner">Damilola Ibrahim</span>
+                                <div class="budgtAmt"><span>N25,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
+                            </div>
+                            <div class="bdgtProgressDiv">
+                                <div class="bdgtUsed" id="bdgtUsed1"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
