--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="bdgtMetric">
                             <div class="bdgtMetricText">
                                 <span class="bdgtOwner">Damilola Ibrahim</span>
-                                <div class="budgtAmt"><span>N25,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
+                                <div class="budgtAmt"><span class="usdAmt">N25,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
                             </div>
                             <div class="bdgtProgressDiv">
                                 <div class="bdgtUsed" id="bdgtUsed1"></div>
@@ -94,11 +94,23 @@
                         <img src="./img/bdgp2.svg" alt="">
                         <div class="bdgtMetric">
                             <div class="bdgtMetricText">
-                                <span class="bdgtOwner">Damilola Ibrahim</span>
-                                <div class="budgtAmt"><span>N25,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
+                                <span class="bdgtOwner">Chidera Nnamdi</span>
+                                <div class="budgtAmt"><span class="usdAmt">N10,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
                             </div>
                             <div class="bdgtProgressDiv">
-                                <div class="bdgtUsed" id="bdgtUsed1"></div>
+                                <div class="bdgtUsed" id="bdgtUsed2"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bdgersona">
+                        <img src="./img/bdgp3.svg" alt="">
+                        <div class="bdgtMetric">
+                            <div class="bdgtMetricText">
+                                <span class="bdgtOwner">Aminat Pinshack</span>
+                                <div class="budgtAmt"><span class="usdAmt">N36,000 &nbsp; / </span><span> &nbsp; N40,000</span></div>
+                            </div>
+                            <div class="bdgtProgressDiv">
+                                <div class="bdgtUsed" id="bdgtUsed3"></div>
                             </div>
                         </div>
                     </div>
